<?xml version="1.0"?>
<package format="3">
  <name>airhunt_bridge</name>
  <version>0.1.0</version>
  <description>AirHunt VLM-guided navigation bridge for Fast-Planner</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
