<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_utils</name>
  <version>0.0.0</version>
  <description>pose_utils</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- <build_depend>rclcpp,std_msgs,sensor_msgs,pcl_ros,nav_msgs,visualization_msgs</build_depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <depend>quadrotor_msgs</depend>
  <depend>traj_utils</depend> -->
  <!-- 这个是测试依赖项，不知道具体什么用 -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>